# django_rabbitmq_db_sync_example

./: .gitignore
admin_django_microservice/: .env_example  docker-compose.yml  pyproject.toml
admin_django_microservice/docker/: Dockerfile
admin_django_microservice/src/apps/products/: models.py  producer.py  views.py
admin_django_microservice/src/apps/products/migrations/: 0001_initial.py
admin_django_microservice/src/config/: settings.py
main_django_microservice/: .env_example  docker-compose.yml  pyproject.toml
main_django_microservice/docker/: Dockerfile  queue.sh  start.sh
main_django_microservice/src/apps/products/: models.py  urls.py  views.py
main_django_microservice/src/apps/products/management/commands/: queue.py
main_django_microservice/src/apps/products/migrations/: 0001_initial.py
main_django_microservice/src/config/: urls.py
